--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             </tr>
         </table>
     </section>
-    <!--seccion 2 contiene el titulo de la seccion 4 parrafos-->
+    <!--seccion 2 contiene el titulo de la seccion y 4 parrafos-->
     <section id="section2">
         <h2>
-            prueba
+            Electr&oacute;nica Vanguardista
         </h2>
         <!--los parrafos son de la misma clase y contienen parte del texto en negrita-->
         <p class="normal_p_class_01">
