--- a/index.html
+++ b/index.html
@@ -126,23 +126,22 @@
         </h2>
         <!--los parrafos son de la misma clase y contienen parte del texto en negrita-->
         <p class="normal_p_class_01">
-            <b>&iquest;Por qu&eacute; elegir Keyday Electronics&reg;?</b><br> 
+            <b>&iquest;Por qu&eacute; elegir Keyday Electronics&reg;?</b>
             Innovando el futuro, impulsados por la excelencia. <br>
             En Keyday Electronics&reg;, estamos comprometidos con proporcionar una calidad inigualable en cada producto y servicio que ofrecemos.
-            Somos la mejor elecci&oacute;n para los entusiastas de la rob&oacute;tica y la electr&oacute;nica.<br>
+            Somos la mejor elecci&oacute;n para los entusiastas de la rob&oacute;tica y la electr&oacute;nica.
         </p>
         <p class="normal_p_class_01">
-            <b>Calidad insuperable de los materiales <br></b>
-            Creemos que las creaciones excepcionales comienzan con componentes excepcionales. Cada producto en Keyday Electronics est&aacute; fabricado con materiales de primera calidad que garantizan durabilidad, eficiencia y un rendimiento &oacute;ptimo. <br>
+            <b>Calidad insuperable de los materiales</b><br>
+            Creemos que las creaciones excepcionales comienzan con componentes excepcionales. Cada producto en Keyday Electronics est&aacute; fabricado con materiales de primera calidad que garantizan durabilidad, eficiencia y un rendimiento &oacute;ptimo.
         </p>
         <p class="normal_p_class_01">
             <b>A&ntilde;os de experiencia</b><br>
-            Con d&eacute;cadas de experiencia en la industria de la electr&oacute;nica y la rob&oacute;tica, nuestro historial habla por s&iacute; solo. Desde el dise&ntilde;o hasta la ejecuci&oacute;n, te ofrecemos soluciones confiables respaldadas por un amplio conocimiento. <br>
+            Con d&eacute;cadas de experiencia en la industria de la electr&oacute;nica y la rob&oacute;tica, nuestro historial habla por s&iacute; solo. Desde el dise&ntilde;o hasta la ejecuci&oacute;n, te ofrecemos soluciones confiables respaldadas por un amplio conocimiento. 
         </p>
         <p class="normal_p_class_01">
             <b>Competencia en la que puedes confiar</b><br>
-            Nuestro equipo de profesionales capacitados est&aacute; apasionado por superar los l&iacute;mites de la innovaci&oacute;n. Combinando experiencia t&eacute;cnica con un enfoque centrado en el cliente, entregamos productos y servicios que superan las expectativas. <br>
-            Precisi&oacute;n impulsada por IA
+            Nuestro equipo de profesionales capacitados est&aacute; apasionado por superar los l&iacute;mites de la innovaci&oacute;n. Combinando experiencia t&eacute;cnica con un enfoque centrado en el cliente, entregamos productos y servicios que superan las expectativas. 
         </p>
     </section>
     <!--seccion 3/Noticias-->
@@ -162,7 +161,7 @@
             </p>
             <p class="news_p_class_01">
                 <b>Caracter&iacute;sticas:</b>
-                Robots Totalmente Ensamblados, listos para entrar en acci&oacute;n de inmediato, estos robots pueden seguir tus comandos de voz o responder a una variedad de controladores de juego (Xbox, PS4, universal). <br>
+                Robots Totalmente Ensamblados, listos para entrar en acci&oacute;n de inmediato, estos robots pueden seguir tus comandos de voz o responder a una variedad de controladores de juego (Xbox, PS4, universal). 
             </p> 
             <p class="news_p_class_01">
                 <b>Componentes Personalizables: </b>
