--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <a href="https://x.com"><img class="social_img_class_00" src="images/xlogo.png" alt="x logo not working"></a>
                     <a href="https://www.linkedin.com"><img class="social_img_class_00" src="images/inlogo.png" alt="linkedin logo not working"></a>
                     <a href="https://www.instagram.com/keyday_electronics"><img class="social_img_class_00" src="images/instalogo.png " alt="instagram logo not working"></a>
-                    <a href="https://www.youtube.com"><img class="social_img_class_00" src="images/ytlogo.png" alt="youtube logo not working" style="margin-bottom: 5px;"></a>
+                    <a href="https://www.youtube.com"><img class="social_img_class_00" id="yt_img_id" src="images/ytlogo.png" alt="youtube logo not working"></a>
                 </td>
         </tr>
         <!--fila que contiene la direccion de la empresa-->
