--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
             <div>
                     <h2>Nuestros Productos</h2>
                      <ul class="ul_class_01">
-                        <li>Robots asistentes: gestione sus tareas dom&eacute;sticas con nuestros avanzados robots humanoides.</li>
-                        <li>Impresoras 3D: alto rendimiento para todas sus necesidades de producci&oacute;n y prototipado.</li>
+                        <li>Robots asistentes: General sus tareas dom&eacute;sticas con nuestros avanzados robots humanoides.</li>
+                        <li>Impresoras 3D: Alto rendimiento para todas sus necesidades de producci&oacute;n y prototipado.</li>
                         <li>Accesorios para Raspberri Pi: Expanda sus proyectos con nuestro amplio cat&aacute;logo de componentes.</li>
                         <li>Microchips ESP32: Compare precios y caracter&iacute;sticas de los fabricantes m&aacute;s populares.</li>
                         <li>Componentes rob&oacute;ticos: Elija los mejores componentes para sus proyectos</li>
-                        <li>Placas base y Kits Arduino: perfecto tanto para principiantes como para profesionales para construir, testear e innovar.</li>
+                        <li>Placas base y Kits Arduino: Perfecto tanto para principiantes como para profesionales para construir, testear e innovar.</li>
                     </ul>
             </div>
             <div>
                     <h2>Nuestros Servicios</h2>
                     <ul class="ul_class_01">
-                        <li>Impresi&oacute;n 3D: desde prototipos hasta dise&ntilde;os comerciales, hacemos sus ideas realidad.</li>
-                        <li>Impresi&oacute;n de placas base: use nuestro software gratuito para dise&ntilde;ar sus placas base y nos encargaremos del resto.</li>
+                        <li>Impresi&oacute;n 3D: Desde prototipos hasta dise&ntilde;os comerciales, hacemos sus ideas realidad.</li>
+                        <li>Impresi&oacute;n de placas base: Use nuestro software gratuito para dise&ntilde;ar sus placas base y nos encargaremos del resto.</li>
                         <li>Reparaci&oacute;n y mantenimiento: Mano de obra experta para todos sus componentes electr&oacute;nicos y rob&oacute;ticos.</li>
                     </ul>
             </div>
